# digital-earth-sweden-community

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start_tests.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  deploy.yml  docker-build.yml  main.yml  publish.yml  test.yml
input/: sentinel2_small_RGB.tiff
resources/: des_s2_msi_l2a.prm
tests/: test_notebooks.py
tutorials/: 000-Terms-and-Conditions.ipynb  010_INTRO-010-System-Overview.ipynb  010_INTRO-020-User-Handling.ipynb  01_INTRO_001-Tutorial-Overview.ipynb  020_DATA_010-Loading-DataCubes.ipynb  020_DATA_020-Property_Filtering.ipynb  030_GEOM_010-Bounding-box.ipynb  030_GEOM_020-Polygons-Intro.ipynb  030_GEOM_030-Polygons-Areas.ipynb  030_GEOM_040-Polygons-Simplify-and-Change-CRS.ipynb  040_VIZ_010-RGB.ipynb  040_VIZ_020-Drawing-Images-On-Base-Map.ipynb  040_VIZ_030-Difference-Analysis.ipynb  050_PROC_010-Processes-intro.ipynb  050_PROC_020-Operators.ipynb  050_PROC_030-Batch-Processing.ipynb  050_PROC_040-Analyze-FORCE-EO-S2MSI2A-product.ipynb  060_EO_010-Masking-data.ipynb  060_EO_020-Reductions.ipynb  060_EO_020-Spatial-Filtering.ipynb  060_EO_030-Spatial-Filtering.ipynb  0990_Further-Reading.ipynb  20.Quality-filtering.ipynb  Dockerfile  Makefile  demo_helpers.py  demo_regions.py  environment.yml  start_notebook.BAT  start_notebook.sh  workshop_W2443.ipynb  workshop_W2443_nuria.ipynb
tutorials/workshop_W2443/: 30-Resampling-Bands.ipynb  Anders_Lista.ipynb  gathering_examples_workshop.ipynb  python_and_other_APIs.ipynb  (+3 more)
(+13 files in other folders)
